<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:screenOrientation="portrait">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_person_black"/>


        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_black"/>

        <item
            android:id="@+id/internet"
            android:title="@string/scanner"
            android:icon="@drawable/ic_scanner_camera_black"/>


    </group>


    <item android:title="@string/app_name">

        <menu>
            <item
                android:id="@+id/setting"
                android:title="settings"
                android:icon="@drawable/ic_settings"/>

            <item
                android:id="@+id/logout"
                android:title="@string/salir"
                android:icon="@drawable/ic_exit_to_app_black"/>

            <item
                android:id="@+id/app_exit"
                android:title="exit"
                android:icon="@drawable/ic_exit_to_app_black"/>

        </menu>

    </item>


</menu>
