<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login"
    android:background="@drawable/loginpho"
    android:fitsSystemWindows="true">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/madre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/ET_email"
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_SingIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/madre1"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/ETpassword"
            android:textColorHighlight="@color/transparenteblanco"
            android:textColorLink="@color/black"
            android:textCursorDrawable="@color/black"
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:filterTouchesWhenObscured="false"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_SingIn"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/SingIn"
        android:textColor="@color/white"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madre1" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_rounded_border"
        android:src="@drawable/ic_scanner_camera_black"
        app:backgroundTint="@color/fulltransparent"
        app:borderWidth="5dp"
        app:fabCustomSize="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>